--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
     </build>
 
     <scm>
-        <developerConnection>scm:git:git@github.com:W4Jamin/pet-clinic.git</developerConnection>
+        <developerConnection>scm:git:https://github.com/W4Jamin/pet-clinic.git</developerConnection>
         <tag>pet-clinic-0.0.1</tag>
     </scm>
 
