--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     </parent>
     <groupId>by9ye.springframework</groupId>
     <artifactId>pet-clinic</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
     <name>pet-clinic</name>
     <description>Pet Clinic Project</description>
 
@@ -47,7 +47,7 @@
     <scm>
         <developerConnection>scm:git:https://github.com/W4Jamin/pet-clinic.git</developerConnection>
         <!--<tag>pet-clinic-0.0.2</tag>-->
-      <tag>pet-clinic-0.0.1</tag>
+      <tag>HEAD</tag>
   </scm>
 
 </project>
